--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -293,17 +293,27 @@ ${value}</textarea>
                         </label>
                         <py:otherwise><!--! Text input fields -->
                           <py:choose>
-                            <span py:when="field.cc_entry"><!--! Special case for Cc: field -->
-                              <em>${field.cc_entry}</em>
-                              <input type="checkbox" id="field-cc" name="cc_update"
-                                title="This checkbox allows you to add or remove yourself from the CC list."
-                                checked="${field.cc_update}" />
-                            </span>
-                            <!--! Cc: when TICKET_EDIT_CC is allowed -->
+                            <!--! Special case for Cc: field -->
                             <span py:when="field.name == 'cc'">
-                              <input  type="text" id="field-${field.name}"
-                                title="Space or comma delimited email addresses and usernames are accepted."
-                                name="field_${field.name}" value="${value}" />
+                              <py:choose>
+                                <!--! Unauthenticated user without TICKET_EDIT_CC and with email set in prefs -->
+                                <py:when test="'cc_entry' in field and field.cc_action is not None">
+                                  <em>$field.cc_entry</em>
+                                  <input type="checkbox" id="field-cc" name="cc_update"
+                                         title="This checkbox allows you to add or remove yourself from the CC list."
+                                         checked="${field.cc_update or None}" />
+                                </py:when>
+                                <!--! Unauthenticated user without TICKET_EDIT_CC and no email set in prefs -->
+                                <i18n:msg py:when="'cc_entry' in field">
+                                  <span class="hint">Set your email in <a href="${href.prefs()}" class="trac-target-new">Preferences</a></span>
+                                </i18n:msg>
+                                <!--! TICKET_EDIT_CC is allowed -->
+                                <py:otherwise>
+                                  <input type="text" id="field-${field.name}"
+                                         title="Space or comma delimited email addresses and usernames are accepted."
+                                         name="field_${field.name}" value="${value}" />
+                                </py:otherwise>
+                              </py:choose>
                             </span>
                             <!--! All the other text input fields -->
                             <input py:otherwise="" type="text" id="field-${field.name}"
