--- a/trac/prefs/templates/prefs_language.html
+++ b/trac/prefs/templates/prefs_language.html
@@ -21,48 +21,51 @@
   </head>
   <body>
 
-    <div class="field" py:with="session_language = settings.session.get('language', '').replace('-', '_')">
-      <label>Language:
-        <select name="language" disabled="${'disabled' if not languages else None}"
-                title="${_('Translations are currently unavailable') if not languages else None}">
+    <table py:with="session_language = settings.session.get('language', '').replace('-', '_')">
+      <tr class="field">
+        <th><label for="language">Language:</label></th>
+        <td><select id="language" name="language" disabled="${'disabled' if not languages else None}"
+                    title="${_('Translations are currently unavailable') if not languages else None}">
           <option value="">Default language</option>
           <option py:for="locale, language in languages"
                   selected="${session_language == locale or None}"
                   value="$locale">$language</option>
-        </select>
-      </label>
-      <span py:if="not has_babel" class="hint">
-        Install Babel for extended language support.
-      </span>
-      <span py:if="'TRAC_ADMIN' in req.perm and has_babel and not languages" class="hint">
-        Message catalogs have not been compiled.
-      </span>
-
-      <div py:if="languages">
-        <p class="hint">Configuring your language will result in all text
-        displayed on this site to use your language instead of that of the
-        server.</p>
-
-        <p class="hint" i18n:msg="">The <strong>Default language</strong> option uses the browser's
-        language negotiation feature to select the appropriate language.</p>
-      </div>
-
-      <p py:if="not languages" class="hint" xml:lang="en">
-        <py:choose>
-          <py:when test="'TRAC_ADMIN' in req.perm">
-            Trac has been localized to more than a dozen of languages but in order
-            to be able to use them, the <a href="http://babel.edgewall.org">Babel</a>
-            package needs to be present when installing Trac. See
-            <a href="${href.wiki('TracInstall')}">TracInstall</a> for details.
-          </py:when>
-          <py:otherwise>
-            Please contact your
-            <a py:strip="not project.admin" href="mailto:${project.admin}">Trac administrator</a>
-            to enable existing translations.
-          </py:otherwise>
-        </py:choose>
-      </p>
-    </div>
+          <span py:if="not has_babel" class="hint">
+            Install Babel for extended language support.
+          </span>
+          <span py:if="'TRAC_ADMIN' in req.perm and has_babel and not languages" class="hint">
+            Message catalogs have not been compiled.
+          </span>
+        </select></td>
+      </tr>
+      <tr>
+        <th></th>
+        <td py:if="languages">
+          <p class="hint">Configuring your language will result in all text
+          displayed on this site to use your language instead of that of the
+          server.</p>
+          <p class="hint" i18n:msg="">The <strong>Default language</strong> option uses the browser's
+          language negotiation feature to select the appropriate language.</p>
+        </td>
+        <td py:if="not languages">
+          <p class="hint" xml:lang="en">
+            <py:choose>
+              <py:when test="'TRAC_ADMIN' in req.perm">
+                Trac has been localized to more than a dozen of languages but in order
+                to be able to use them, the <a href="http://babel.edgewall.org">Babel</a>
+                package needs to be present when installing Trac. See
+                <a href="${href.wiki('TracInstall')}">TracInstall</a> for details.
+              </py:when>
+              <py:otherwise>
+                Please contact your
+                <a py:strip="not project.admin" href="mailto:${project.admin}">Trac administrator</a>
+                to enable existing translations.
+              </py:otherwise>
+            </py:choose>
+          </p>
+        </td>
+      </tr>
+    </table>
 
   </body>
 </html>
