--- a/trac/prefs/templates/prefs_language.html
+++ b/trac/prefs/templates/prefs_language.html
@@ -24,19 +24,21 @@
     <table py:with="session_language = settings.session.get('language', '').replace('-', '_')">
       <tr class="field">
         <th><label for="language">Language:</label></th>
-        <td><select id="language" name="language" disabled="${'disabled' if not languages else None}"
-                    title="${_('Translations are currently unavailable') if not languages else None}">
-          <option value="">Default language</option>
-          <option py:for="locale, language in languages"
-                  selected="${session_language == locale or None}"
-                  value="$locale">$language</option>
+        <td>
+          <select id="language" name="language" disabled="${'disabled' if not languages else None}"
+                  title="${_('Translations are currently unavailable') if not languages else None}">
+            <option value="">Default language</option>
+            <option py:for="locale, language in languages"
+                    selected="${session_language == locale or None}"
+                    value="$locale">$language</option>
+          </select>
           <span py:if="not has_babel" class="hint">
             Install Babel for extended language support.
           </span>
           <span py:if="'TRAC_ADMIN' in req.perm and has_babel and not languages" class="hint">
             Message catalogs have not been compiled.
           </span>
-        </select></td>
+        </td>
       </tr>
       <tr>
         <th></th>
