--- a/trac/prefs/templates/prefs_language.html
+++ b/trac/prefs/templates/prefs_language.html
@@ -43,11 +43,12 @@
       <tr>
         <th></th>
         <td py:if="languages">
-          <p class="hint">Configuring your language will result in all text
-          displayed on this site to use your language instead of that of the
-          server.</p>
-          <p class="hint" i18n:msg="">The <strong>Default language</strong> option uses the browser's
-          language negotiation feature to select the appropriate language.</p>
+          <p class="hint" i18n:msg="">Configuring your language will result <!--!
+          -->in all text displayed on this site to use your language instead <!--!
+          -->of that of the server.</p>
+          <p class="hint" i18n:msg="">The <strong>Default language</strong> <!--!
+          -->option uses the browser's language negotiation feature to select <!--!
+          -->the appropriate language.</p>
         </td>
         <td py:if="not languages">
           <p class="hint" xml:lang="en">
