--- a/trac/search/templates/search.html
+++ b/trac/search/templates/search.html
@@ -33,15 +33,15 @@
       <h1><label for="q">Search</label></h1>
       <form id="fullsearch" action="${href.search()}" method="get">
         <p>
-          <input type="text" id="q" name="q" class="trac-autofocus" size="40" value="${query}" />
+          <input type="text" id="q" name="q" class="trac-autofocus" size="40" value="$query" />
           <input type="hidden" name="noquickjump" value="1" />
           <input type="submit" value="${_('Search')}" />
         </p>
         <p class="filters">
           <py:for each="filter in filters">
-            <input type="checkbox" id="${filter.name}" name="${filter.name}"
+            <input type="checkbox" id="$filter.name" name="$filter.name"
                    checked="${filter.active or None}" />
-            <label for="${filter.name}">${filter.label}</label>
+            <label for="$filter.name">$filter.label</label>
           </py:for>
        </p>
       </form>
@@ -55,16 +55,16 @@
           <dl id="results">
             <py:if test="quickjump">
               <dt id="quickjump">
-                <a href="${quickjump.href}" i18n:msg="name">Quickjump to ${quickjump.name}</a>
+                <a href="$quickjump.href" i18n:msg="name">Quickjump to $quickjump.name</a>
               </dt>
-              <dd>${quickjump.description}</dd>
+              <dd>$quickjump.description</dd>
             </py:if>
             <py:for each="result in results">
-              <dt><a href="${result.href}" class="searchable">${result.title}</a></dt>
-              <dd class="searchable">${result.excerpt}</dd>
+              <dt><a href="$result.href" class="searchable">$result.title</a></dt>
+              <dd class="searchable">$result.excerpt</dd>
               <dd>
                 <py:if test="result.author"><span class="author" i18n:msg="author">By ${format_author(result.author)}</span> &mdash;</py:if>
-                <span class="date">${result.date}</span>
+                <span class="date">$result.date</span>
               </dd>
             </py:for>
           </dl>
