--- a/trac/ticket/templates/ticket.html
+++ b/trac/ticket/templates/ticket.html
@@ -303,7 +303,7 @@ ${value}</textarea>
                                   <em py:when="field.cc_action is None" i18n:msg="">
                                     Set your email in <a href="${href.prefs()}" class="trac-target-new">Preferences</a>
                                   </em>
-                                  <em py:otherwise="">$field.cc_entry</em>
+                                  <label py:otherwise="" for="field-cc"><em>$field.cc_entry</em></label>
                                   <input type="checkbox" id="field-cc" name="cc_update"
                                          title="This checkbox allows you to add or remove yourself from the CC list."
                                          disabled="${field.cc_action is None or None}" checked="${field.cc_update or None}" />
