--- a/trac/versioncontrol/templates/admin_repositories.html
+++ b/trac/versioncontrol/templates/admin_repositories.html
@@ -146,7 +146,9 @@ $info.description</textarea>
                 </td>
                 <td>${(info.type or _('(default)')) if not info.alias else None}</td>
                 <td py:choose="">
-                  <py:when test="info.dir">$info.prettydir</py:when>
+                  <py:when test="info.dir">
+                    <span py:strip="not info.error" class="missing" title="$info.error">$info.prettydir</span>
+                  </py:when>
                   <em py:otherwise="" i18n:msg="repo">Alias of ${info.alias or _('(default)')}</em>
                 </td>
                 <td><a py:if="info.rev" href="${href.changeset(info.rev, reponame) or None}">[$info.display_rev]</a></td>
