--- a/trac/versioncontrol/templates/admin_repositories.html
+++ b/trac/versioncontrol/templates/admin_repositories.html
@@ -146,7 +146,7 @@ $info.description</textarea>
                 </td>
                 <td>${(info.type or _('(default)')) if not info.alias else None}</td>
                 <td py:choose="">
-                  <em py:when="not info.dir" i18n:msg="repo">Alias of ${info.alias or _('(default)')}</em>
+                  <em py:when="info.alias" i18n:msg="repo">Alias of ${info.alias or _('(default)')}</em>
                   <span py:otherwise="" py:strip="not info.error" class="missing" title="$info.error">$info.prettydir</span>
                 </td>
                 <td><a py:if="info.rev" href="${href.changeset(info.rev, reponame) or None}">[$info.display_rev]</a></td>
